--- a/assinment/assinment 4/index.html
+++ b/assinment/assinment 4/index.html
@@ -1,11 +1,24 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link href ="./index.css" rel = "stylesheet"></link>
 </head>
+
 <body>
-    
+    <h1>I am vaibhav verma</h1>
+
+    <div id = "grandparent">
+        <p style="margin: 0px;">grandparent</p>
+        <div id = "parent">
+            <p style="padding: 0px;">parent</p>
+            <button id = "child">CLICK !!!</button>
+        </div>
+    </div>
 </body>
+   <script src="index.js"></script>
+
 </html>
